fix: docs and models
